tests/neg-custom-args/captures/consume-twice.check
-- Type Error: tests/neg-custom-args/captures/consume-twice.scala:6:7 --------------------------------------------------
Separation failure: Illegal access to (x : Object^), which was passed as a consume parameter to method send
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
5 |  send(x)
  |       -
  |       The capability was consumed here.
6 |  send(x)  // error
  |       ^
  |       Then, it was used here

